--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -18,3 +18,4 @@ jobs:
         run: |
           brew audit --strict --online ./brew-unattended-upgrade.rb
           brew audit --strict --online ./csv2json.rb
+          brew audit --strict --online ./displayrcd.rb
