--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -19,3 +19,4 @@ jobs:
           brew audit --strict --online ./brew-unattended-upgrade.rb
           brew audit --strict --online ./csv2json.rb
           brew audit --strict --online ./displayrcd.rb
+          brew audit --strict --online ./icloud-backup-utils.rb
