Need cask dependency

--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -31,11 +31,14 @@ jobs:
       - name: Update Homebrew
         run: brew update
 
-      - name: Install tap
-        run: brew tap josh/tap
+      - name: Install Homebrew livecheck
+        run: brew tap homebrew/cask
 
       - name: Install Homebrew livecheck
         run: brew tap homebrew/livecheck
+
+      - name: Install tap
+        run: brew tap josh/tap
 
       - name: Check if formulas are outdated
         run: brew livecheck
