--- a/.github/workflows/brew-livecheck.yml
+++ b/.github/workflows/brew-livecheck.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Update Homebrew
-        run: brew update
+        run: brew update || true
 
       - name: Install tap
         run: brew tap josh/tap
