--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -10,9 +10,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Homebrew bundler gems
-        run: brew --env
-        env:
-          HOMEBREW_INSTALL_BUNDLER_GEMS_FIRST: 1
+        run: brew install-bundler-gems
 
       - name: Audit formulas
         run: |
