--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Audit formulas
         run: |
-          brew audit --strict --online ./brew-unattended-upgrade.rb
-          brew audit --strict --online ./csv2json.rb
-          brew audit --strict --online ./displayrcd.rb
-          brew audit --strict --online ./icloud-backup-utils.rb
-          brew audit --strict --online ./swift-completions.rb
+          brew audit --strict --online --formula ./brew-unattended-upgrade.rb
+          brew audit --strict --online --formula ./csv2json.rb
+          brew audit --strict --online --formula ./displayrcd.rb
+          brew audit --strict --online --formula ./icloud-backup-utils.rb
+          brew audit --strict --online --formula ./swift-completions.rb
