Try running out of tap dir

--- a/.github/workflows/brew-livecheck.yml
+++ b/.github/workflows/brew-livecheck.yml
@@ -11,18 +11,20 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v2
-
       - name: Update Homebrew
         run: brew update || true
 
-      - name: Install tap
-        run: brew tap josh/tap
+      - name: Check out tap
+      - uses: actions/checkout@v2
+        with:
+          path: "/usr/local/Homebrew/Library/Taps/josh/homebrew-tap"
 
       - name: Update outdated formulas
+        working-directory: "/usr/local/Homebrew/Library/Taps/josh/homebrew-tap"
         run: script/bump-outdated-formula
 
       - name: Commit formula changes
+        working-directory: "/usr/local/Homebrew/Library/Taps/josh/homebrew-tap"
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'joshbot@users.noreply.github.com'
@@ -30,4 +32,5 @@ jobs:
           git commit --message "Update formulas" || true
 
       - name: Push changes
+        working-directory: "/usr/local/Homebrew/Library/Taps/josh/homebrew-tap"
         run: git push
