--- a/.github/workflows/brew-livecheck.yml
+++ b/.github/workflows/brew-livecheck.yml
@@ -16,10 +16,8 @@ jobs:
       - name: Update Homebrew
         run: brew update || true
 
-      - name: Link tap
-        run: |
-          mkdir -p  /usr/local/Homebrew/Library/Taps/josh
-          ln -s . /usr/local/Homebrew/Library/Taps/josh/homebrew-tap
+      - name: Install tap
+        run: brew tap josh/tap
 
       - name: Update outdated formulas
         run: script/bump-outdated-formula
