Turn on homebrew dev

--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -6,6 +6,9 @@ jobs:
   audit:
     runs-on: ubuntu-latest
 
+    env:
+      HOMEBREW_DEVELOPER: "1"
+
     steps:
       - name: Set up Homebrew
         id: set-up-homebrew
