--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -30,10 +30,8 @@ jobs:
 
       - name: Audit formulas
         run: |
-          brew audit --strict --online josh/tap/bbedit-cli
-          brew audit --strict --online josh/tap/brew-unattended-upgrade
-          brew audit --strict --online josh/tap/itunes-library-export
-          brew audit --strict --online josh/tap/tmux-catppuccin
-          brew audit --strict --online josh/tap/tmux-sensible
-          brew audit --strict --online josh/tap/tmux-tokyo-night
-          brew audit --strict --online josh/tap/tmux-yank
+          set -x
+          for formula in *.rb; do
+            name="josh/tap/${formula%.rb}"
+            brew audit --strict --online "$name"
+          done
