--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Install Homebrew Bundler RubyGems
         if: steps.cache.outputs.cache-hit != 'true'
-        run: brew install-bundler-gems
+        run: |
+          brew install-bundler-gems
+          brew audit git
 
       - name: Audit formulas
         run: |
