--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -28,7 +28,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           brew install-bundler-gems
-          brew audit git
+          brew audit testbottest
 
       - name: Audit formulas
         run: |
