--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -34,6 +34,5 @@ jobs:
         run: |
           set -x
           for formula in *.rb; do
-            name="josh/tap/${formula%.rb}"
-            brew audit --strict --online "$name"
+            brew audit --strict --online "josh/tap/${formula%.rb}"
           done
