Try overriding with checkout action

--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -28,6 +28,11 @@ jobs:
           brew install-bundler-gems
           brew audit testbottest
 
+      # Fix tap checkout to the correct sha
+      - uses: actions/checkout@v4
+        with:
+          path: /home/linuxbrew/.linuxbrew/Homebrew/Library/Taps/josh/homebrew-tap
+
       - name: Audit formulas
         run: |
           set -x
