--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -32,7 +32,4 @@ jobs:
 
       - name: Audit formulas
         run: |
-          set -x
-          for formula in *.rb; do
-            brew audit --strict --online "josh/tap/${formula%.rb}"
-          done
+          brew audit --strict --online --tap josh/tap
