--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -26,6 +26,10 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: brew install-bundler-gems --groups=audit,style
 
+      - name: Install brew style dependencies
+        run: |
+          brew install actionlint shellcheck
+
       - name: Style
         run: |
           brew style josh/tap
