--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,11 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
+  "extends": ["config:recommended", ":disableDependencyDashboard"],
   "homebrew": {
-    "fileMatch": [
-      "^[^/]+[.]rb$"
-    ]
+    "fileMatch": ["^[^/]+[.]rb$"]
   }
 }
