--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,5 +3,6 @@
   "extends": ["config:recommended", ":disableDependencyDashboard"],
   "homebrew": {
     "fileMatch": ["^[^/]+[.]rb$"]
-  }
+  },
+  "automerge": true
 }
