--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,7 @@
   "homebrew": {
     "fileMatch": ["^[^/]+[.]rb$"]
   },
-  "automerge": true
+  "automerge": true,
+  "timezone": "America/Los_Angeles",
+  "schedule": ["before 4am on Monday"]
 }
