--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended", ":disableDependencyDashboard"],
   "homebrew": {
     "fileMatch": ["^[^/]+[.]rb$"]
   },
   "automerge": true,
-  "timezone": "America/Los_Angeles",
-  "schedule": ["before 4am on Monday"]
+  "prConcurrentLimit": 0,
+  "prHourlyLimit": 0
 }
