--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Set up Homebrew
         id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
+        uses: Homebrew/actions/setup-homebrew@cf1daa2e557e8a5196734dec7614d9f724bc9cd0 # master
 
       - name: Cache Homebrew Bundler RubyGems
         id: cache
